# valx-writer

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  ui-harness.html  vite.config.ts
dev/: WORLD_MODE_PHASE2_PLAN.md  WORLD_MODE_PHASE3_PLAN.md  WORLD_MODE_PHASE4_PLAN.md  WORLD_MODE_PHASE5_PLAN.md  WORLD_MODE_PHASE6_PLAN.md  WORLD_MODE_PHASE7_PLAN.md  WORLD_MODE_PLAN.md  harness-bundle.js  harness-entry.ts  harness.html  serve.mjs  uiHarness.tsx
public/: splash.html
scripts/: build-legal-pages.mjs  release.ps1
site/: download.html  index.html  styles.css
src/: App.tsx  highlight.css  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  native_mark_as.rs  onedrive.rs  spellcheck.rs
src/components/: DictionaryModal.tsx  Editor.tsx  FormatConverter.tsx  NoteList.tsx  OnboardingSlideshow.tsx  RichTextEditor.tsx  SettingsModal.tsx  Sidebar.tsx  SlashMenu.tsx  WindowControls.tsx  WorldCanvas.tsx
src/hooks/: useFileSystem.ts  useNotes.ts  useOneDrive.ts  useWorlds.ts
src/lib/: bookmarks.test.ts  bookmarks.ts  byline.test.ts  byline.ts  codeHighlight.test.ts  codeHighlight.ts  creators.ts  desktop.ts  exportDocs.js  exports.ts  format.test.ts  format.ts  greeting.test.ts  greeting.ts  history.test.ts  history.ts  legal.ts  mediaUrl.test.ts  mediaUrl.ts  noteLinks.test.ts  noteLinks.ts  noteSort.test.ts  noteSort.ts  noteTags.test.ts  noteTags.ts  onedrive.ts  prefs.ts  search.test.ts  search.ts  share.ts  slop.test.ts  slop.ts  spellcheck.ts  splash.ts  sync.test.ts  sync.ts  tableEditing.ts  typewriter.ts  world.test.ts  world.ts  (+1 more)
